--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/add-room.html
@@ -474,7 +474,7 @@
                     formData.append("capacity", document.getElementById("roomCapacity").value);
                     formData.append("room_nums", document.getElementById("roomQuantity").value);
                     formData.append("roomStatus", document.getElementById("roomStatusList").value);
-                    formData.append("hotelEmail", userInfo.username);
+                    formData.append("hotelEmail", userInfo.email);
 
                     // Xử lý phần file ảnh từ trường "roomImages"
                     const roomImagesInput = document.getElementById("roomImages");
@@ -589,7 +589,7 @@
             formData.append("capacity", document.getElementById("roomCapacity").value);
             formData.append("room_nums", document.getElementById("roomQuantity").value);
             formData.append("roomStatus", document.getElementById("roomStatusList").value);
-            formData.append("hotelEmail", userInfo.username);
+            formData.append("hotelEmail", userInfo.email);
 
             // Xử lý phần file ảnh từ trường "roomImages"
             const roomImagesInput = document.getElementById("roomImages");
