--- a/FINAL/travel-booking/src/main/resources/templates/user/confirmation.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/confirmation.html
@@ -111,7 +111,7 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tour List<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="tour-list.html">Tour List Leftsidebar</a></li>
-                                            <li><a href="tour-list1.html">Tour List Rightsidebar</a></li>
+                                            <li><a href="../unused/tour-list1.html">Tour List Rightsidebar</a></li>
                                             <li><a href="tour-list2.html">Tour List Fullwidth</a></li>
                                         </ul>
                                     </li>
@@ -127,7 +127,7 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tour Single<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="tour-single.html">Tour Single Leftsidebar</a></li>
-                                            <li><a href="tour-single1.html">Tour Single Rightsidebar</a></li>
+                                            <li><a href="../unused/tour-single1.html">Tour Single Rightsidebar</a></li>
                                             <li><a href="tour-single2.html">Tour Single Fullwidth</a></li>
                                         </ul>
                                     </li>
@@ -137,7 +137,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="icon-arrow-down" aria-hidden="true"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="team.html">Our Guide</a></li>
-                                    <li><a href="booking.html">Booking</a></li>
+                                    <li><a href="../unused/booking.html">Booking</a></li>
                                     <li><a href="confirmation.html">confirmation</a></li>
                                     <li class="submenu dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<i class="fa fa-angle-right" aria-hidden="true"></i></a>
@@ -204,7 +204,7 @@
                         <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="me-3">
 <i class="icon-user"></i> Login/Register
 </a>
-                        <a href="booking.html" class="nir-btn white">Book Now</a>
+                        <a href="../unused/booking.html" class="nir-btn white">Book Now</a>
                     </div>
                     <div id="slicknav-mobile"></div>
                 </div>
