--- a/FINAL/travel-booking/src/main/resources/templates/user/index.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/index.html
@@ -180,7 +180,7 @@
                 <div class="section-title mb-6 w-50 mx-auto text-center">
                     <h4 class="mb-1 theme1">Top Destinations</h4>
                     <h2 class="mb-1">Explore <span class="theme">Top Destinations</span></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+                    <p>Travel is the only thing you buy that makes you rich
                     </p>
                 </div>
                 <div class="row align-items-center">
@@ -239,13 +239,13 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                                 <div class="trend-item1">
                                     <div class="trend-image position-relative rounded">
-                                        <img src="assets/user/images/destination/destination15.jpg" alt="image">
+                                        <img src="assets/user/images/destination/da-lat.jpg" alt="image">
                                         <div
                                                 class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100">
                                             <div class="trend-content-title">
-                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Moscow</a>
+                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Da Lat</a>
                                                 </h5>
-                                                <h3 class="mb-0 white">Russia</h3>
+                                                <h3 class="mb-0 white">Viet Nam</h3>
                                             </div>
                                             <span class="white bg-theme p-1 px-2 rounded">15 Tours</span>
                                         </div>
@@ -256,13 +256,13 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                                 <div class="trend-item1">
                                     <div class="trend-image position-relative rounded">
-                                        <img src="assets/user/images/destination/destination16.jpg" alt="image">
+                                        <img src="assets/user/images/destination/phu-yen.jpg" alt="image">
                                         <div
                                                 class="trend-content d-flex align-items-center justify-content-between position-absolute bottom-0 p-4 w-100 z-index">
                                             <div class="trend-content-title">
-                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Florida</a>
+                                                <h5 class="mb-0"><a href="tour-grid.html" class="theme1">Phu Yen</a>
                                                 </h5>
-                                                <h3 class="mb-0 white">America</h3>
+                                                <h3 class="mb-0 white">Viet Nam</h3>
                                             </div>
                                             <span class="white bg-theme p-1 px-2 rounded">32 Tours</span>
                                         </div>
@@ -289,8 +289,7 @@
                                 <h5 class="mb-1 theme">Love Where Your're Going</h5>
                                 <h2><a href="detail-fullwidth.html">Explore Your Life, <span class="theme1"> Travel Where
                                         You Want!</span></a></h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore magna aliqua.</p>
+                                <p>Your all-in-one package for independent travel</p>
                             </div>
                             <div class="video-button text-center position-relative">
                                 <div class="call-button text-center">
