--- a/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/avatar_info.html
@@ -3,17 +3,17 @@
     <div class="nav-item dropdown avatar" style="display: none">
         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img class=" rounded-circle" style="width: 30px; height: 30px" src="assets/user/images/default-avatar.png" alt="profile">
+            <img id="avatarImg" class=" rounded-circle" style="width: 30px; height: 30px" src="assets/user/images/default-avatar.png" alt="profile">
         </a>
-        <div class="dropdown-menu p-0" aria-labelledby="profileDropdown">
+        <div class="dropdown-menu p-0" id="dropdown-menu-profile" aria-labelledby="profileDropdown">
             <div class="d-flex flex-column align-items-center border-bottom px-5 py-1">
                 <div class="mb-1">
-                    <img style="width: 68px; height: 68px" class="rounded-circle" src="assets/user/images/default-avatar.png" alt>
+                    <img id="avatarImgBig" style="width: 68px; height: 68px" class="rounded-circle" src="assets/user/images/default-avatar.png" alt>
                 </div>
                 <div class="text-center">
-                    <p class="tx-16 fw-bolder fullname-info" style="font-size: 15px">User name</p>
-                    <p class="tx-12 text-muted" style="font-size: 12px">
-                        <p class="email-info">toantravel@gmail.com</p>
+                    <p id="profileName" class="tx-16 fw-bolder">User name</p>
+                    <p class="tx-12 text-muted">
+                        <a href="#"></a>
                     </p>
                 </div>
             </div>
