--- a/FINAL/travel-booking/src/main/resources/templates/management/user/user-profile.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/user/user-profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout/layout_admin :: main-fragment(
+      th:replace="~{layout/layout_dashboard_user :: main-fragment(
                                                 ~{:: title},
                                                 ~{:: #css-resources},
                                                 ~{:: #js-resources},
@@ -9,96 +9,250 @@
 
 <head>
 
-    <title>Profile</title>
+    <title>User Dashboard</title>
 
     <th:block id="css-resources">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet"/>
+        <style>
+            .select2-container .select2-selection--single {
+                height: 45px; /* Thay đổi chiều cao theo ý muốn */
+                border: 1px solid #e9ecef;
+                border-radius: 10px;
+            }
 
+            .select2-container--default .select2-selection--single .select2-selection__arrow b {
+                margin-left: -17px;
+                margin-top: 7px;
+            }
+
+            .select2-container .select2-selection--single .select2-selection__rendered {
+                padding-left: 15px;
+            }
+        </style>
     </th:block>
 </head>
 
 <body>
 
-    <main id="main-content">
-        <div class="page-content">
-            <nav class="page-breadcrumb d-flex align-items-center justify-content-between">
-                <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
-                    <li class="breadcrumb-item"><a href="dashboard.html">Setting</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">My Profile</li>
-                </ol>
-            </nav>
-            <div class="row">
-                <div class="col-md-12 grid-margin stretch-card">
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="mb-4">My Profile</h4>
-                            <form class="forms-sample">
+<main id="main-content">
+    <div class="page-content">
+
+        <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="mb-4">Account Infor</h4>
+                        <div class="container">
+                            <div class="row my-t bs">
+                                <div class="col d-flex justify-content-center">
+                                    <img id="avatar-account" class="rounded-circle" style="width: 150px; height: 150px"
+                                         alt="Avatar"
+                                         src="/assets/user/images/default-avatar.png"/>
+
+                                </div>
+                                <div class="row mt-2 mx-0">
+                                    <div class="col d-flex justify-content-center">
+                                        <button class="btn btn-sm change-avatar-account" style="border: 0.5px solid grey">
+                                            <i class="link-icon p-1" data-feather="upload"></i> Upload avatar
+                                        </button>
+                                        <button class="btn btn-sm btn-success submit-avatar-btn ml-1" hidden="hidden">
+                                            Save
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <form class="forms-sample mt-3" id="uploadForm">
                                 <div class="row">
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="upload" class="form-label">Upload Logo</label>
-                                        <input class="form-control" type="file" id="upload">
+                                    <input type="file" hidden="hidden" id="avatar-input-account"/>
+                                    <div class="col-lg-4 mb-5">
+                                        <label for="name" class="form-label"> Full Name *</label>
+                                        <input type="text" class="form-control" id="name" autocomplete="off"
+                                               placeholder name="name">
                                     </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="upload" class="form-label">Upload Favicon</label>
-                                        <input class="form-control" type="file" id="upload">
-                                    </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="comapanyname" class="form-label"> Company Name</label>
-                                        <input type="text" class="form-control" id="comapanyname" autocomplete="off"
-                                               placeholder>
-                                    </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="contact" class="form-label"> Contact Person</label>
-                                        <input type="text" class="form-control" id="contact" autocomplete="off"
-                                               placeholder>
-                                    </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="address" class="form-label"> Address 1</label>
-                                        <input type="text" class="form-control" id="address" autocomplete="off"
-                                               placeholder>
-                                    </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="address2" class="form-label"> Address 2</label>
-                                        <input type="text" class="form-control" id="address2" autocomplete="off"
-                                               placeholder>
-                                    </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="email" class="form-label">Email Address</label>
+                                    <div class="col-lg-4 mb-5">
+                                        <label for="email" class="form-label">Email Address *</label>
                                         <input type="email" class="form-control" id="email" autocomplete="off"
-                                               placeholder>
+                                               placeholder name="email">
                                     </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="phoneno" class="form-label">Phone No.</label>
-                                        <input type="number" class="form-control" id="phoneno" autocomplete="off"
-                                               placeholder>
+                                    <div class="col-lg-4 mb-5">
+                                        <label for="genderList" class="form-label">Gender *</label>
+                                        <select class="form-select" id="genderList" name="gender">
+                                            <option value="" disabled selected>Choose gender</option>
+                                            <option th:each="gender : ${genderList}" th:value="${gender}"
+                                                    th:text="${gender.getName}"
+                                                    class="text-body"></option>
+                                        </select>
                                     </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="mobileno" class="form-label">Mobile No.</label>
-                                        <input type="number" class="form-control" id="mobileno" autocomplete="off"
-                                               placeholder>
+                                    <div class="col-lg-4 mb-5">
+                                        <label for="phone" class="form-label">Phone *</label>
+                                        <input type="text" class="form-control" id="phone" autocomplete="off"
+                                               placeholder name="phone">
                                     </div>
-                                    <div class="col-lg-6 mb-3">
-                                        <label for="website" class="form-label"> Website Url</label>
-                                        <input type="text" class="form-control" id="website" autocomplete="off"
-                                               placeholder>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary"><i class="link-icon"
-                                                                                         data-feather="plus"></i> Save Profile</button>
+                                    <div class="col-lg-4 mb-5">
+                                        <label for="address" class="form-label">Address *</label>
+                                        <input type="text" class="form-control" id="address" autocomplete="off"
+                                               placeholder name="address">
                                     </div>
                                 </div>
                             </form>
+                            <div class="text-right pt-4">
+                                <button type="submit" class="btn btn-primary submit-account-profile-btn"
+                                        id="submit-account-profile-btn"><i class="link-icon"
+                                                                           data-feather="save"></i> Save Profile
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
-    </main>
+    </div>
+</main>
 
-    <th:block id="js-resources">
+<th:block id="js-resources">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"
+            integrity="sha512-rstIgDs0xPgmG6RX1Aba4KV5cWJbAMcvRCVmglpam9SoHZiUCyQVDdH2LPlxoHtrv17XWblE/V/PP+Tr04hbtA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoWOLjDkFNpk1ZS15jTN-YhlONrCF-6QE&callback=initMap" async defer></script>-->
 
-    </th:block>
+    <script>
+        $(document).ready(function () {
+            // Kích hoạt Select2 cho các thẻ select
+            $('.select2').select2();
 
+            let userInfo = JSON.parse(localStorage.getItem("userInfo"))
+            let emailInput = document.getElementById('email');
+            let nameInput = document.getElementById('name');
+            let avatarInput = document.getElementById('avatar-account')
+            const btnSubmit = document.getElementById('submit-account-profile-btn');
+
+            emailInput.value = userInfo.email;
+            emailInput.readOnly = true;
+3
+            $("#name").val(userInfo.fullName);
+            if (userInfo.avatar !== null && userInfo.avatar !== "") {
+                avatarInput.src = userInfo.avatar;
+            }
+            if (userInfo.gender !== null && userInfo.gender !== "") {
+                $("#genderList").val(userInfo.gender);
+            }
+            $("#phone").val(userInfo.phone);
+            $("#address").val(userInfo.address);
+
+
+            $("#uploadForm").validate({
+                onfocusout: false,
+                onkeyup: false,
+                onclick: false,
+                rules: {
+                    "name": {
+                        required: true,
+                        minlength: 5,
+                        maxlength: 50
+                    },
+                    "gender": {
+                        required:true
+                    },
+                    "phone": {
+                        required: true,
+                        minlength: 10,
+                        maxlength: 15,
+                        digits: true
+                    },
+                    "address": {
+                        required: true,
+                        maxlength: 200
+                    },
+                },
+                messages: {
+                    "name": {
+                        required: "Please enter your full name",
+                        minlength: "Full name must be at least 5 characters long",
+                        maxlength: "Full name must not exceed 50 characters"
+                    },
+                    "gender":{
+                        required: "Please choose your gender"
+                    },
+                    "phone": {
+                        required: "Please enter the phone number.",
+                        minlength: "Phone number must be at least 10 digits.",
+                        maxlength: "Phone number must not exceed 15 digits.",
+                        digits: "Please enter a valid phone number with digits only."
+                    },
+                    "address": {
+                        required: "Please enter the hotel address.",
+                        maxlength: "The address must not exceed 200 characters."
+                    },
+                },
+                errorClass: "custom-error-message"
+            });
+
+
+            // toastr.options.timeOut = 2500; // 2.5s
+            let chosenFile = null;
+
+            $(".change-avatar-account").click(() => {
+                $("#avatar-input-account").click();
+            });
+
+            $("#avatar-input-account").change(event => {
+                const tempFiles = event.target.files;
+                if (!tempFiles || tempFiles.length === 0) {
+                    return;
+                }
+                console.log(event.target.files[0].data);
+                chosenFile = tempFiles[0];
+
+                const imageBlob = new Blob([chosenFile], {type: chosenFile.type});
+                const imageUrl = URL.createObjectURL(imageBlob);
+                $("#avatar-account").attr("src", imageUrl);
+            });
+
+            btnSubmit.addEventListener('click', function () {
+
+                if ($("#uploadForm").valid()) {
+                    const formData = new FormData();
+                    if (chosenFile !== null) {
+                        formData.append('avatar', chosenFile);
+                    }
+                    // formData.append('avatar', chosenFile);
+                    formData.append('fullName', nameInput.value);
+                    formData.append('gender', $("#genderList").val())
+                    formData.append('phone', $("#phone").val())
+                    formData.append('address', $("#address").val())
+                    formData.append('id', userInfo.id)
+
+                    console.log(JSON.stringify(formData))
+                    showLoading();
+                    $.ajax({
+                        url: '/api/v1/user',
+                        data: formData,
+                        type: 'PUT',
+                        contentType: false, // NEEDED, DON'T OMIT THIS (requires jQuery 1.6+)
+                        processData: false, // NEEDED, DON'T OMIT THIS
+                        success: function (data) {
+                            toastr.success("Update thông tin thành công")
+                            console.log(data);
+                            //Update local storage
+                            window.location.reload();
+                        },
+                        error: function (errorData) {
+                            console.log(errorData);
+                            toastr.error("Vui lòng điền đầy đủ thông tin bắt buộc");
+                        },
+                        complete: function () {
+                            hideLoading();
+                        }
+                    });
+                }
+            });
+
+        });
+    </script>
+</th:block>
 </body>
 
 </html>
