--- a/FINAL/travel-booking/src/main/resources/templates/unused/booking.html
+++ b/FINAL/travel-booking/src/main/resources/templates/unused/booking.html
@@ -57,7 +57,7 @@
                 <div class="navbar-flex d-flex align-items-center justify-content-between w-100 pb-3 pt-3">
 
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="../user/index.html">
                             <img src="assets/user/images/logo1.png" alt="image">
                         </a>
                     </div>
@@ -65,7 +65,7 @@
                     <div class="navbar-collapse1 d-flex align-items-center" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav" id="responsive-menu">
                             <li class="dropdown submenu active">
-                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                <a href="../user/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                    aria-haspopup="true" aria-expanded="false">Home</a>
 
                             </li>
