--- a/FINAL/travel-booking/src/main/resources/templates/unused/tour-single1.html
+++ b/FINAL/travel-booking/src/main/resources/templates/unused/tour-single1.html
@@ -51,7 +51,7 @@
                 <div class="navbar-flex d-flex align-items-center justify-content-between w-100 pb-3 pt-3">
 
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="../user/index.html">
 <img src="assets/user/images/logo.png" alt="image">
 </a>
                     </div>
@@ -59,9 +59,9 @@
                     <div class="navbar-collapse1 d-flex align-items-center" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav" id="responsive-menu">
                             <li class="dropdown submenu">
-                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <i class="icon-arrow-down" aria-hidden="true"></i></a>
+                                <a href="../user/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <i class="icon-arrow-down" aria-hidden="true"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="index.html">Homepage Default</a></li>
+                                    <li><a href="../user/index.html">Homepage Default</a></li>
                                     <li><a href="index-1.html">Homepage 1</a></li>
                                     <li><a href="index-2.html">Homepage 2</a></li>
                                     <li><a href="index-3.html">Homepage 3</a></li>
@@ -138,7 +138,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="team.html">Our Guide</a></li>
                                     <li><a href="booking.html">Booking</a></li>
-                                    <li><a href="confirmation.html">confirmation</a></li>
+                                    <li><a href="../user/confirmation.html">confirmation</a></li>
                                     <li class="submenu dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                         <ul class="dropdown-menu">
